--- a/theme/service.html
+++ b/theme/service.html
@@ -63,59 +63,60 @@
 					<div class="collapse navbar-collapse ml-auto" id="navbarsExample09">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item @@home">
-								<a class="nav-link" href="index.html">Home</a>
+								<a class="nav-link" href="index.html">Startseite</a>
 							</li>
 							<li class="nav-item dropdown @@portfolio">
-								<a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio <span class="ion-ios-arrow-down"></span></a>
+								<a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Einrichtungen <span class="ion-ios-arrow-down"></span></a>
 								<ul class="dropdown-menu" aria-labelledby="dropdown03">
-									<li><a class="dropdown-item @@portfolioFilter" href="portfolio.html">Portfolio Filter</a></li>
-									<li><a class="dropdown-item @@portfolioSingle" href="portfolio-single.html">Portfolio Single</a></li>
+									<li><a class="dropdown-item @@portfolioFilter" href="portfolio.html">Schulen</a></li>
+									<li><a class="dropdown-item @@portfolioFilter" href="portfolio.html">Kitas</a></li>
+									<li><a class="dropdown-item @@portfolioFilter" href="portfolio.html">Tageseltern</a></li>
 
-									<li class="dropdown dropdown-submenu dropright">
-										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0301" role="button"
-											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
+<!--									<li class="dropdown dropdown-submenu dropright">-->
+<!--										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0301" role="button"-->
+<!--											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>-->
 
-										<ul class="dropdown-menu" aria-labelledby="dropdown0301">
-											<li><a class="dropdown-item" href="index.html">Submenu 01</a></li>
-											<li><a class="dropdown-item" href="index.html">Submenu 02</a></li>
-										</ul>
-									</li>
+<!--										<ul class="dropdown-menu" aria-labelledby="dropdown0301">-->
+<!--											<li><a class="dropdown-item" href="index.html">Submenu 01</a></li>-->
+<!--											<li><a class="dropdown-item" href="index.html">Submenu 02</a></li>-->
+<!--										</ul>-->
+<!--									</li>-->
 								</ul>
 							</li>
-							<li class="nav-item active"><a class="nav-link" href="service.html">Service</a></li>
-							<li class="nav-item dropdown @@blog">
-								<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true"
-									aria-expanded="false">Blog <span class="ion-ios-arrow-down"></span></a>
-								<ul class="dropdown-menu" aria-labelledby="dropdown05">
-									<li><a class="dropdown-item @@blogGrid" href="blog-grid.html">Blog Grid</a></li>
-									<li><a class="dropdown-item @@blogSingle" href="blog-single.html">Blog Single</a></li>
-									<li><a class="dropdown-item @@blogRS" href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-									<li><a class="dropdown-item @@blogLS" href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-									<li><a class="dropdown-item @@blogFW" href="blog-full-width.html">Blog Full Width</a></li>
+							<li class="nav-item active"><a class="nav-link" href="service.html">Über uns</a></li>
+<!--							<li class="nav-item dropdown @@blog">-->
+<!--								<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true"-->
+<!--									aria-expanded="false">Blog <span class="ion-ios-arrow-down"></span></a>-->
+<!--								<ul class="dropdown-menu" aria-labelledby="dropdown05">-->
+<!--									<li><a class="dropdown-item @@blogGrid" href="blog-grid.html">Blog Grid</a></li>-->
+<!--									<li><a class="dropdown-item @@blogSingle" href="blog-single.html">Blog Single</a></li>-->
+<!--									<li><a class="dropdown-item @@blogRS" href="blog-right-sidebar.html">Blog Right Sidebar</a></li>-->
+<!--									<li><a class="dropdown-item @@blogLS" href="blog-left-sidebar.html">Blog Left Sidebar</a></li>-->
+<!--									<li><a class="dropdown-item @@blogFW" href="blog-full-width.html">Blog Full Width</a></li>-->
 
-									<li class="dropdown dropdown-submenu dropleft">
-										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0501" role="button"
-											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
+<!--									<li class="dropdown dropdown-submenu dropleft">-->
+<!--										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0501" role="button"-->
+<!--											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>-->
 
-										<ul class="dropdown-menu" aria-labelledby="dropdown0501">
-											<li><a class="dropdown-item" href="index.html">Submenu 01</a></li>
-											<li><a class="dropdown-item" href="index.html">Submenu 02</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li class="nav-item dropdown @@pages">
-								<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true"
-									aria-expanded="false">Pages <span class="ion-ios-arrow-down"></span></a>
-								<ul class="dropdown-menu" aria-labelledby="dropdown05">
-									<li><a class="dropdown-item @@about" href="about.html">About Us</a></li>
-									<li><a class="dropdown-item @@comingSoon" href="coming-soon.html">Coming Soon</a></li>
-									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>
-									<li><a class="dropdown-item @@faq" href="faq.html">FAQ</a></li>
-									<li><a class="dropdown-item @@pricing" href="pricing.html">Pricing Table</a></li>
-								</ul>
-							</li>
-							<li class="nav-item @@contact"><a class="nav-link" href="contact.html">Contact</a></li>
+<!--										<ul class="dropdown-menu" aria-labelledby="dropdown0501">-->
+<!--											<li><a class="dropdown-item" href="index.html">Submenu 01</a></li>-->
+<!--											<li><a class="dropdown-item" href="index.html">Submenu 02</a></li>-->
+<!--										</ul>-->
+<!--									</li>-->
+<!--								</ul>-->
+<!--							</li>-->
+<!--							<li class="nav-item dropdown @@pages">-->
+<!--								<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true"-->
+<!--									aria-expanded="false">Pages <span class="ion-ios-arrow-down"></span></a>-->
+<!--								<ul class="dropdown-menu" aria-labelledby="dropdown05">-->
+<!--									<li><a class="dropdown-item @@about" href="about.html">About Us</a></li>-->
+<!--									<li><a class="dropdown-item @@comingSoon" href="coming-soon.html">Coming Soon</a></li>-->
+<!--									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>-->
+<!--									<li><a class="dropdown-item @@faq" href="faq.html">FAQ</a></li>-->
+<!--									<li><a class="dropdown-item @@pricing" href="pricing.html">Pricing Table</a></li>-->
+<!--								</ul>-->
+<!--							</li>-->
+							<li class="nav-item @@contact"><a class="nav-link" href="contact.html">Kontakt</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -130,8 +131,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h1>Services</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ex!</p>
+          <h1>Über die Deutsche Bildungsstiftung</h1>
+          <p></p>
         </div>
       </div>
     </div>
@@ -142,8 +143,26 @@
 	<div class="container">
 		<div class="row align-items-center text-center text-lg-left">
 			<div class="col-lg-6">
-				<h2>Creative UX/UI Design Agency</h2>
-				<p class="mt-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate soluta corporis odit, optio cum! Accusantium numquam ab, natus excepturi architecto earum ipsa aliquam, illum, omnis rerum, eveniet officia nihil. Eum quod iure nulla, soluta architecto distinctio. Nesciunt odio ullam expedita, neque fugit maiores sunt perferendis placeat autem animi, nihil quis suscipit quibusdam ut reiciendis doloribus natus nemo id quod illum aut culpa perspiciatis consequuntur tempore? Facilis nam vitae iure quisquam eius harum consequatur sapiente assumenda, officia voluptas quas numquam placeat, alias molestias nisi laudantium nesciunt perspiciatis suscipit hic voluptate corporis id distinctio earum. Dolor reprehenderit fuga dolore officia adipisci neque!</p>
+				<h2>Unser Zweck</h2>
+				<p class="mt-30">Die Deutsche Bildungsstiftung wurde mit dem Ziel gegründet, die Bildung in ganz Deutschland zu fördern. Wir glauben an die Kraft des kollaborativen Vermögensaufbaus und der transparenten Fondsverwaltung, um einen dauerhaften positiven Einfluss auf Bildungseinrichtungen für Kinder und Jgendliche im ganzen Land zu erzielen.
+
+				</p>
+			</div>
+			<div class="col-lg-6">
+				<img class="img-fluid" src="images/company/company-group-pic.jpg">
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="service-about section">
+	<div class="container">
+		<div class="row align-items-center text-center text-lg-left">
+			<div class="col-lg-6">
+				<h2>Unser Zweck</h2>
+				<p class="mt-30">Die Deutsche Bildungsstiftung wurde mit dem Ziel gegründet, die Bildung in ganz Deutschland zu fördern. Wir glauben an die Kraft des kollaborativen Vermögensaufbaus und der transparenten Fondsverwaltung, um einen dauerhaften positiven Einfluss auf Bildungseinrichtungen für Kinder und Jgendliche im ganzen Land zu erzielen.
+
+				</p>
 			</div>
 			<div class="col-lg-6">
 				<img class="img-fluid" src="images/company/company-group-pic.jpg">
@@ -155,80 +174,91 @@
 <section class="service-arrow">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-4 col-sm-6 bg-primary">
-				<div class="block">
-					<i class="ion-erlenmeyer-flask text-white"></i>
-					<h3 class="text-white mb-3">Interface Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe enim impedit repudiandae omnis est temporibus.</p>
-				</div>
-			</div>
+
 			<div class="col-lg-4 col-sm-6 bg-primary bg-primary-dark">
 				<div class="block">
 					<i class="ion-leaf text-white"></i>
-					<h3 class="text-white mb-3">Product Branding</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe enim impedit repudiandae omnis est temporibus.</p>
+					<h3 class="text-white mb-3">Leitprinzipien</h3>
+					<p>
+						<ul><li>
+						Transparenz in allen finanziellen Vorgängen
+					</li><li>Chancengleichheit für alle Schulen
+				</li><li>Kollaborativer Ansatz zum Vermögensaufbau
+				</li><li>Effiziente und faire Verteilung der Mittel
+				</li><li>Kontinuierliche Verbesserung und Anpassung an Bildungsbedürfnisse
+						</li></ul>
+					</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-12 bg-primary bg-primary-darker">
 				<div class="block">
 					<i class="ion-lightbulb text-white"></i>
-					<h3 class="text-white mb-3">Game Development</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe enim impedit repudiandae omnis est temporibus.</p>
+					<h3 class="text-white mb-3">Organisationsstruktur</h3>
+					<p>Unsere Stiftung wird von einem Kuratorium geleitet, das sich aus Bildungsexperten, Finanzfachleuten und Gemeindevertretern zusammensetzt. Wir arbeiten mit einer schlanken Verwaltungsstruktur, um sicherzustellen, dass der Großteil der Mittel direkt Schulen und Schülern zugutekommt.
+
+					</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-sm-6 bg-primary">
+				<div class="block">
+					<i class="ion-erlenmeyer-flask text-white"></i>
+					<h3 class="text-white mb-3">Arbeitsweise</h3>
+					<p><ol class="list-decimal list-inside space-y-2 text-lg"><li>Schulen erhalten virtuelle Konten in unserem System</li><li>Spenden werden gesammelt und bestimmten Schulen oder dem allgemeinen Fonds zugewiesen</li><li>Die Mittel werden in ein diversifiziertes ETF-Portfolio investiert</li><li>Gewinne werden jährlich an die Schulen entsprechend ihrer Kontostände verteilt</li><li>Neue Schulen erhalten Startkapital aus dem gemeinsamen Fonds</li><li>Detaillierte Finanzberichte werden regelmäßig für volle Transparenz veröffentlicht</li></ol></p>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section class="service-list section bg-gray">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="section-title text-center">
-					<h2>What we do best</h2>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-4 col-sm-6">
-				<div class="block">
-					<h3 class="mb-3">User research</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="block">
-					<h3 class="mb-3">Product marketing</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="block">
-					<h3 class="mb-3">Visual design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="block">
-					<h3 class="mb-3">Front-end engineering</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="block">
-					<h3 class="mb-3">Usability testing & analytics</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="block">
-					<h3 class="mb-3">Design sprints & prototyping</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+<!--<section class="service-list section bg-gray">-->
+<!--	<div class="container">-->
+<!--		<div class="row">-->
+<!--			<div class="col-md-12">-->
+<!--				<div class="section-title text-center">-->
+<!--					<h2>What we do best</h2>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--		<div class="row">-->
+<!--			<div class="col-lg-4 col-sm-6">-->
+<!--				<div class="block">-->
+<!--					<h3 class="mb-3">User research</h3>-->
+<!--					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-lg-4 col-sm-6">-->
+<!--				<div class="block">-->
+<!--					<h3 class="mb-3">Product marketing</h3>-->
+<!--					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-lg-4 col-sm-6">-->
+<!--				<div class="block">-->
+<!--					<h3 class="mb-3">Visual design</h3>-->
+<!--					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-lg-4 col-sm-6">-->
+<!--				<div class="block">-->
+<!--					<h3 class="mb-3">Front-end engineering</h3>-->
+<!--					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-lg-4 col-sm-6">-->
+<!--				<div class="block">-->
+<!--					<h3 class="mb-3">Usability testing & analytics</h3>-->
+<!--					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-lg-4 col-sm-6">-->
+<!--				<div class="block">-->
+<!--					<h3 class="mb-3">Design sprints & prototyping</h3>-->
+<!--					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
 
 <section class="call-to-action bg-1 section-sm overly">
 	<div class="container">
